# 1m-module

./: .gitignore  CMakeLists.txt  convergencia-up.nb
docs/: taylorhood-weakform.lyx
sources/: CMakeLists.txt  ProblemData.cpp  ProblemData.h  TPZSparseMatRed.cpp  TPZSparseMatRed.h
targets/: 1m-module-dynamics.cpp  1m-module-mixed.cpp  1m-module-new-mesh-hdiv.cpp  1m-module.cpp  CMakeLists.txt  ProblemData.cpp  ProblemData.h  bishop-TH.cpp  bishop-beam-UP.cpp  convergence-mixed.cpp  cooks-membrane-TH.cpp  cooks-membrane-UP.cpp  fully-hybrid.cpp  non-homogeneous-stretch.cpp  non-homogeneous-stretch2D.cpp  non-homogeneous-stretch3D-TH.cpp  non-homogeneous-stretch3D.cpp  shear-locking-beam-UP.cpp  simple-shear.cpp  taylor-hood-module.cpp  taylor-hood-test.cpp  test-saddle-permute.cpp  uniform-stretch.cpp
targets/meshes/: 1m-module-hdiv-coarse.json  1m-module-hdiv.json  1m-module-init.json  1m-module-lid.json  1m-module-th.json  Bishop-beam-1-hex.msh  Bishop-beam-1-tet.msh  Bishop-beam-1.msh  Bishop-beam-2-hex.msh  Bishop-beam-2-tet.msh  Bishop-beam-2.msh  Bishop-beam-3-hex.msh  Bishop-beam-3-tet.msh  Bishop-beam-3.msh  Bishop-beam-4-hex.msh  Bishop-beam-4-tet.msh  Bishop-beam-4.msh  Bishop-beam-5-hex.msh  Bishop-beam-5.msh  Casco_cortado.geo  Casco_cortado.igs  Casco_cortado_v2.geo  Casco_cortado_v2.igs  Casco_cortado_v2.msh  UniformShear.geo  UniformShear.json  UniformShear.msh  UniformShear3D.geo  UniformShear3D.json  UniformShear3D.msh  UniformShearTH.geo  UniformShearTH.json  UniformShearTH.msh  UniformTension.geo  UniformTension.json  UniformTension.msh  UniformTension3D.json  UniformTension3D.msh  UniformTensionTH.geo  UniformTensionTH.json  (+122 more)
